EL-4 Code smell fixes